fix(colors): use a better contrast for the error color (a11y) (#101)

--- a/src/styles/theme/colors.css
+++ b/src/styles/theme/colors.css
@@ -37,7 +37,7 @@
 
   --color-black: #000;
   --color-white: #fff;
-  --color-error: #ff0000;
+  --color-error: #eb0000;
 
   --color-base: var(--color-secondary-600);
 
